--- a/webserver/public/test.html
+++ b/webserver/public/test.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>
-    this page is a test page, dont worry!!
+    this page is a test page, don't worry!!
 </h1>
 <h2>
     more test pages to come!!
